--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,16 +1,19 @@
 services:
 
   web:
-    build: 
-      dockerfile: ./nginx/Dockerfile
+    image: nginx:alpine
     ports:
       - "80:80"
     container_name: web-server
+    volumes:
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
 
   app:
     build:
       dockerfile: ./php/Dockerfile
     container_name: app-service
+    volumes:
+      - ./app:/var/www/html
 
   db:
     image: mysql:8.0.33
@@ -18,6 +21,8 @@ services:
       - mysqldata:/var/lib/mysql
     container_name: db-server
     restart: unless-stopped
+    ports:
+      - "4306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: secret
       MYSQL_DATABASE: docker-db
