--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,4 +1,16 @@
 FROM php:8.1-fpm-alpine
 
 RUN docker-php-ext-install pdo pdo_mysql
-    
+
+ENV COMPOSER_ALLOW_SUPERUSER=1
+
+# COPY --from=composer:2.4.4 /usr/bin/composer /usr/bin/composer 
+# COPY ./app/composer.* ./
+
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/bin --filename=composer
+
+COPY ./app .
+
+RUN composer install --prefer-dist --no-dev --no-scripts --no-progress --no-interaction
+
+RUN composer dump-autoload --optimize
